--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,18 @@ node_modules/
 
 # Sentry Config File
 .env.sentry-build-plugin
+
+terraform.tfvars
+*.auto.tfvars
+*.tfstate
+*.tfstate.backup
+*.tfplan
+env/*
+playwright-report/
+Thumbs.db
+.DS_Store
+.Thumbs.db
+.husky
+.husky/*
+TASKMANAGEMENT
+TASKMANAGEMENT/*
