--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,13 +56,16 @@ jobs:
         run: npm install -g pnpm && pnpm install --no-lockfile
 
       - name: Lint
-        run: npm run lint
+        run: pnpm run lint
 
       - name: Type check
         run: npm run typecheck
 
       - name: Build app
-        run: npm run build
+        run: pnpm run build
+
+      - name: Run database migrations
+        run: pnpm run db:migrate
 
       - name: Install Playwright Browsers
         run: pnpm exec playwright install --with-deps
