--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,8 @@ jobs:
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-region: us-east-1 # Add your desired AWS region
 
       - name: Login to Amazon ECR
         id: login-ecr
