--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-region: us-east-1 # Add your desired AWS region
+          aws-region: us-east-1
 
       - name: Login to Amazon ECR
         id: login-ecr
