--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,8 +46,8 @@ jobs:
           context: .
           push: true
           tags: |
-            ${{ steps.login-ecr.outputs.registry }}/markdowntailor:${{ steps.semver.outputs.tag }}
-            ${{ steps.login-ecr.outputs.registry }}/markdowntailor:latest
+            ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPO }}:${{ steps.semver.outputs.tag }}
+            ${{ steps.login-ecr.outputs.registry }}/${{ secrets.ECR_REPO }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
           build-args: |
