--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: lts/*
 
       - name: Install dependencies
-        run: npm install -g pnpm && pnpm install --no-lockfile
+        run: npm install -g pnpm && pnpm install
 
       - name: Lint
         run: pnpm run lint
