--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.1",
     "react-markdown": "^10.1.0",
+    "server-only": "^0.0.1",
     "sonner": "^2.0.5",
     "stripe": "^18.2.1",
     "swr": "^2.3.3",
