--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,8 +44,10 @@ jobs:
           echo "image=$ECR_REGISTRY/${{ secrets.ECR_REPOSITORY }}:latest" >> $GITHUB_OUTPUT
 
       - name: Download task definition
+        env:
+          TASK_DEFINITION: ${{ secrets.TASK_DEFINITION }}
         run: |
-          aws ecs describe-task-definition --task-definition markdowntailor-prod --query taskDefinition > task-definition.json
+          aws ecs describe-task-definition --task-definition $TASK_DEFINITION --query taskDefinition > task-definition.json
 
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: task-def
