--- a/package.json
+++ b/package.json
@@ -15,11 +15,7 @@
     "codegen": "npx playwright codegen http://localhost:3000",
     "show-report": "pnpm exec playwright show-report",
     "typecheck": "tsc --noEmit",
-    "db:push": "drizzle-kit push",
-    "db:pull": "drizzle-kit pull",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio",
+    "db:migrate": "tsx src/db/migrate.ts",
     "stripe-webhook": "stripe listen --forward-to localhost:3000/api/stripe/webhook"
   },
   "dependencies": {
