--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "next-themes": "^0.4.6",
     "ollama-ai-provider": "^1.2.0",
     "pg": "^8.16.2",
+    "playwright": "^1.53.1",
     "playwright-core": "^1.53.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
