--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,7 +56,7 @@ jobs:
             -e DATABASE_URL=postgres://postgres:postgres@host.docker.internal:5432/db \
             -e AUTH_DRIZZLE_URL=postgres://postgres:postgres@host.docker.internal:5432/db \
             -e AUTH_SECRET="${{ secrets.AUTH_SECRET }}" \
-            -e AUTH_TRUST_HOST="http://localhost:3000" \
+            -e AUTH_TRUST_HOST=true \
             -e AUTH_URL="http://localhost:3000/api/auth" \
             -e AUTH_GITHUB_ID="${{ secrets.AUTH_GITHUB_ID }}" \
             -e AUTH_GITHUB_SECRET="${{ secrets.AUTH_GITHUB_SECRET }}" \
