--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "postinstall": "playwright install chromium",
+    "postinstall": "playwright install --with-deps chromium",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
