--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,8 @@ jobs:
         with:
           node-version: "20" # Use a specific version to match your Dockerfile
       - uses: pnpm/action-setup@v3
+        with:
+          version: 10
 
       - name: Cache pnpm dependencies
         uses: actions/cache@v4
