--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "@aws-sdk/client-rds-data": "^3.835.0",
     "@fontsource/open-sans": "^5.2.6",
     "@hookform/resolvers": "^5.1.1",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
     "@monaco-editor/react": "^4.7.0",
     "@neondatabase/serverless": "^1.0.1",
+    "@next/mdx": "^15.3.4",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -41,9 +44,9 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@sentry/nextjs": "^9.33.0",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.3.1",
+    "@types/mdx": "^2.0.13",
     "@uiw/react-md-editor": "^4.0.7",
     "@uiw/react-textarea-code-editor": "^3.1.1",
     "@upstash/ratelimit": "^2.0.5",
