--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "postinstall": "playwright install --with-deps chromium",
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -80,6 +80,8 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.1",
     "react-markdown": "^10.1.0",
+    "remark-frontmatter": "^5.0.0",
+    "remark-gfm": "^4.0.1",
     "server-only": "^0.0.1",
     "sonner": "^2.0.5",
     "stripe": "^18.2.1",
