--- a/package.json
+++ b/package.json
@@ -52,16 +52,20 @@
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.35.0",
     "ai": "^4.3.16",
+    "bright": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "codehike": "^1.0.7",
     "decimal.js": "^10.5.0",
     "diff": "^8.0.2",
     "dompurify": "^3.2.6",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
     "drizzle-zod": "^0.7.1",
+    "feed": "^5.1.0",
     "framer-motion": "^12.19.1",
+    "gray-matter": "^4.0.3",
     "html2canvas": "^1.4.1",
     "import-in-the-middle": "^1.14.2",
     "jspdf": "^3.0.1",
@@ -71,6 +75,7 @@
     "motion": "^12.19.1",
     "next": "15.3.2",
     "next-auth": "5.0.0-beta.29",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "ollama-ai-provider": "^1.2.0",
     "pg": "^8.16.2",
@@ -80,8 +85,11 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.1",
     "react-markdown": "^10.1.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
     "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.1",
+    "remark-toc": "^9.0.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.5",
     "stripe": "^18.2.1",
