--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
   "name": "markdowntailor",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "postinstall": "playwright install --with-deps chromium",
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "pnpm exec playwright test",
+    "lint:fix": "next lint --fix",
+    "type-check": "tsc --noEmit",
+    "test": "playwright test",
     "test:ui": "pnpm exec playwright test --ui",
     "test:failed": "npx playwright test --last-failed",
     "codegen": "npx playwright codegen http://localhost:3000",
     "show-report": "pnpm exec playwright show-report",
-    "typecheck": "tsc --noEmit",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio",
     "stripe-webhook": "stripe listen --forward-to localhost:3000/api/stripe/webhook"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.12",
-    "@ai-sdk/openai": "^1.3.22",
+    "@ai-sdk/openai": "^1.3.23",
     "@ai-sdk/react": "^1.2.12",
     "@auth/drizzle-adapter": "^1.10.0",
     "@auth/neon-adapter": "^1.10.0",
@@ -30,7 +33,7 @@
     "@mdx-js/react": "^3.1.0",
     "@monaco-editor/react": "^4.7.0",
     "@neondatabase/serverless": "^1.0.1",
-    "@next/mdx": "^15.3.4",
+    "@next/mdx": "^15.3.5",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -52,13 +55,13 @@
     "@uiw/react-textarea-code-editor": "^3.1.1",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.35.1",
-    "ai": "^4.3.16",
+    "ai": "^4.3.17",
     "bright": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "codehike": "^1.0.7",
-    "decimal.js": "^10.5.0",
+    "decimal.js": "^10.6.0",
     "diff": "^8.0.2",
     "dompurify": "^3.2.6",
     "dotenv": "^16.6.1",
@@ -84,7 +87,7 @@
     "playwright-core": "^1.53.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.59.0",
+    "react-hook-form": "^7.60.0",
     "react-markdown": "^10.1.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
@@ -92,14 +95,14 @@
     "remark-gfm": "^4.0.1",
     "remark-toc": "^9.0.0",
     "server-only": "^0.0.1",
-    "sonner": "^2.0.5",
+    "sonner": "^2.0.6",
     "stripe": "^18.3.0",
     "swr": "^2.3.4",
     "tailwind-merge": "^3.3.1",
     "usehooks-ts": "^3.1.1",
     "uuid": "^11.1.0",
     "ws": "^8.18.3",
-    "zod": "^3.25.71"
+    "zod": "^3.25.75"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -120,11 +123,12 @@
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.30.1",
     "eslint-config-next": "15.3.2",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.2",
-    "msw": "^2.10.2",
+    "msw": "^2.10.3",
     "node-fetch": "^3.3.2",
     "postcss": "^8.5.6",
     "postgres": "^3.4.7",
@@ -132,7 +136,7 @@
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
-    "tw-animate-css": "^1.3.4",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5.8.3",
     "undici": "^7.11.0",
     "vite-tsconfig-paths": "^5.1.4",
