--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "stripe": "^18.3.0",
     "swr": "^2.3.4",
     "tailwind-merge": "^3.3.1",
+    "uncrypto": "^0.1.3",
     "usehooks-ts": "^3.1.1",
     "uuid": "^11.1.0",
     "ws": "^8.18.3",
