--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "codehike": "^1.0.7",
     "decimal.js": "^10.6.0",
     "diff": "^8.0.2",
