--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,6 +43,12 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Lint code
+        run: pnpm run lint
+
+      - name: Typecheck
+        run: pnpm run typecheck
+
       - name: Setup Pages
         id: setup_pages
         uses: actions/configure-pages@v5
