--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "preinstall": "npx only-allow pnpm",
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "typecheck": "tsc --noEmit",
@@ -15,23 +14,14 @@
     "test:ui": "pnpm exec playwright test --ui",
     "test:failed": "npx playwright test --last-failed",
     "codegen": "npx playwright codegen http://localhost:3000",
-    "show-report": "pnpm exec playwright show-report",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio",
-    "stripe-webhook": "stripe listen --forward-to localhost:3000/api/stripe/webhook"
+    "show-report": "pnpm exec playwright show-report"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "^1.2.12",
-    "@ai-sdk/openai": "^1.3.23",
-    "@ai-sdk/react": "^1.2.12",
-    "@auth/drizzle-adapter": "^1.10.0",
     "@fontsource/open-sans": "^5.2.6",
     "@hookform/resolvers": "^5.1.1",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@monaco-editor/react": "^4.7.0",
-    "@neondatabase/serverless": "^1.0.1",
     "@next/mdx": "^15.3.5",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -47,14 +37,9 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@stripe/react-stripe-js": "^3.7.0",
-    "@stripe/stripe-js": "^7.4.0",
     "@types/mdx": "^2.0.13",
     "@uiw/react-md-editor": "^4.0.7",
     "@uiw/react-textarea-code-editor": "^3.1.1",
-    "@upstash/ratelimit": "^2.0.5",
-    "@upstash/redis": "^1.35.1",
-    "ai": "^4.3.17",
     "bright": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
@@ -65,8 +50,6 @@
     "diff": "^8.0.2",
     "dompurify": "^3.2.6",
     "dotenv": "^16.6.1",
-    "drizzle-orm": "^0.43.1",
-    "drizzle-zod": "^0.7.1",
     "feed": "^5.1.0",
     "framer-motion": "^12.23.0",
     "gray-matter": "^4.0.3",
@@ -77,10 +60,8 @@
     "monaco-editor": "^0.52.2",
     "motion": "^12.23.0",
     "next": "15.3.5",
-    "next-auth": "5.0.0-beta.29",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
-    "pg": "^8.16.3",
     "playwright-core": "^1.53.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -92,7 +73,6 @@
     "remark-gfm": "^4.0.1",
     "remark-toc": "^9.0.0",
     "sonner": "^2.0.6",
-    "stripe": "^18.3.0",
     "swr": "^2.3.4",
     "tailwind-merge": "^3.3.1",
     "uncrypto": "^0.1.3",
@@ -112,12 +92,10 @@
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.4",
-    "@types/pg": "^8.15.4",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/ws": "^8.18.1",
     "@vitejs/plugin-react": "^4.6.0",
-    "drizzle-kit": "^0.31.4",
     "eslint": "^9.30.1",
     "eslint-config-next": "15.3.2",
     "husky": "^9.1.7",
@@ -129,7 +107,6 @@
     "node-fetch": "^3.3.2",
     "playwright": "^1.53.2",
     "postcss": "^8.5.6",
-    "postgres": "^3.4.7",
     "tailwindcss": "^4.1.11",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
